# FicheContactBack

./: .dockerignore  .env.example  .gitignore  BUGFIX_PLANNED_WORKS.md  CHANGELOG.md  CHECKLIST.md  DEPLOYMENT_FILES.md  DEPLOYMENT_SUMMARY.md  DEPLOY_RAPIDE.md  Dockerfile  FRONTEND_SPECIFICATIONS.md  IMPROVEMENTS.md  QUICKSTART_DEPLOY.md  README.md  REFACTORING.md  SECRETS_GITHUB.md  SIMPLE_DEPLOY.md  START_HERE.md  check-deployment.sh  deploy.sh  docker-compose.production.yml  docker-compose.yml  main.py  pyproject.toml  request.http  requirements.txt  run-migration.sh  setup-vps.sh  tests.md
.github/workflows/: README.md  ci.yml  deploy-simple.yml
config/: work_schemas.json  works_schemas_config.py
contact_fiche/: contact_fiche_usecases.py  enums.py  fiche_repository_protocol.py  in_memory_fiche_repository.py
contact_fiche/entities/: fiche_entity.py  works_planned_entity.py
docs/: DEPLOYMENT_HOSTINGER.md
infrastructure/: logging_config.py
infrastructure/api/: __init__.py  main.py  schemas.py
infrastructure/database/: connexion.py  fiche_contact.db  fiche_converter.py  fiche_model.py
infrastructure/repositories/: __init__.py  sqlite_fiche_repository.py
migrations/: 001_remove_obsolete_columns.sql  002_add_planned_works.sql  002_add_planned_works_postgres.sql  README.md
tests/: test_contact_fiche.py
