[project]
name = "tdd-fiche"
version = "0.1.0"
description = "API de gestion de fiches clients pour FB Menuiseries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jsonschema>=4.23.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "python-json-logger>=2.0.7",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["contact_fiche", "infrastructure"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
